# 3D-Reverb

./: .gitignore  CMakeLists.txt  README.md
src/: ParamIDs.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/ui/: CustomAudioVisualiser.h  Dial.cpp  Dial.h  EditorContent.cpp  EditorContent.h  EditorLnf.cpp  FreezeButton.cpp  NumericInputFilter.h  SpectrumAnalyzer.h
